# qc

./: README.md
complementary-gap/: main.py
factorization/: factorization.py  factorization_test.py
factorization/qasm/: phase_estimation_4.qasm  phase_estimation_8.qasm
parallel-execution/: Cargo.toml  run.sh
parallel-execution/src/: main.rs
qcoder/2024-01-20/A1/: main.py
qcoder/2024-01-20/A2/: main.py
qcoder/2024-01-20/A3/: main.py
qcoder/2024-01-20/A4/: main.py
qcoder/2024-01-20/A5/: main.py
qcoder/2024-01-20/B1/: main.py
qcoder/2024-01-20/B2/: main.py
qcoder/2024-01-20/B3/: main.py
qcoder/2024-01-20/B4/: main.py
qcoder/2024-01-20/C1/: main.py
qiskit/: backend.py  grover.py  simulator.py  simulator_test.py
qsrh-exercise/choi/: 4_2_2_code.py  distance-2-repetition-code.py
simulation/: simulator.py  simulator_test.py
simulation/data/: conf_fake_backend.json  defs_fake_backend.json  props_fake_backend.json
spc/: Cargo.toml
spc/data/: random_quantum_circuit.qasm
spc/scripts/: random-circuit.py
spc/src/: main.rs  pbc.rs
stim/: surface_code.py  surface_code_initialization.py  surface_code_test.py  util.py  util_test.py
