[package]
name = "spc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
rand = "0.8.5"
log = "0.4"
env_logger = "0.10.0"
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
qasm = "1.0.0"
oq3_lexer = "0.6.0"
oq3_parser = "0.6.0"
oq3_semantics = "0.6.0"
oq3_source_file = "0.6.0"
oq3_syntax = "0.6.0"
